<resources>
    <string name="app_name">Yuudee AAC</string>
    <string name="startrecorder">Recording</string>
    <string name="stoprecorder">Recording finished</string>
    <string name="startplay">Playing...</string>
    <string name="stopplay">Done</string>
    <string name="prepare">Ready</string>
    <string name="add_new_course">New courseware</string>
    <string name="title">Courseware</string>
    <string name="select_layout">Choose layout</string>
    <string name="delete_this_course">Delete this courseware</string>
    <string name="back">Back</string>
    <string name="create_category">New category</string>
    <string name="create_card">New card</string>
    <string name="product_introduction">Yuudee AAC</string>
    <string name="training_introduction">Training</string>
    <string name="feedback">Feedback</string>
    <string name="update_version">Upgrade app</string>
    <string name="add_from_material_library">From Library</string>
    <string name="make_a_card_by_yourself">Create a new card</string>
    <string name="select_a_picture_as_cover">Choose a cover image</string>
    <string name="enter_card_name">Input card name here...</string>
    <string name="record_sound_for_card">Record your voice, \n\ne.g. \"I want to eat apples.\"\n\nLet the children hear your voice.</string>
    <string name="animation">Animation</string>
    <string name="no_animation">No animation</string>
    <string name="zoom_in">Enlarge</string>
    <string name="zoom_in_and_rotate">Enlarge and rotate</string>
    <string name="delete_this_card">Delete this card</string>
    <string name="mute">Mute</string>
    <string name="can_not_edit_system_category">(Official categories cannot be edited)</string>
    <string name="can_not_edit_system_card">(Official cards cannot be edited)</string>
    <string name="enter_material_libray_to_edit_card">Go to Library to edit this card >></string>
    <string name="enter_material_libray_to_edit_category">Go to Library to edit this category >></string>
    <string name="confirm_to_delete_card">Delete this card?</string>
    <string name="confirm_to_delete_category">Delete this whole category?</string>
    <string name="delete_category">Delete this category</string>
    <string name="click_again_to_quit_app">Press again to exit</string>
    <string name="already_last_one_can_not_delete">Last courseware cannot be deleted</string>
    <string name="enter_new_course_name">New courseware name here...</string>
    <string name="enter_category_name">New category name here...</string>
    <string name="uncategory">Uncategorized</string>
    <string name="category_name_already_exists">Category exists, please choose another name.</string>
    <string name="card_name_already_exists">Card exists, please choose another name.</string>
    <string name="record_already_deleted">Voice deleted.</string>
    <string name="enter_button_to_record">Please record an audio first.</string>
    <string name="product_introduction_1">1. Enter Edit Mode\nHold down three of the screen\'s four corners(left top, right top, right bottom) and you can enter the editing interface.</string>
    <string name="product_introduction_2">2. Editing pictures\nAfter entering edit mode, click the icon on the top right corner of the picture to edit pictures. For pictures you no longer need, you can click on the \"Delete this card\" option, the picture will then be removed from the course. Pictures can also be set with clicking animation effects. Animations are \"No animation\", \"Enlarge\", \"Enlarge and rotate\". Using animation effects can give kids a good visual cue.</string>
    <string name="product_introduction_3">3. Changing page layout\nClick \"Courseware Settings\" on the lower right corner of the screen to enter Courseware settings and you can set the page layout. Page layout includes two types: one picture in one page, four pictures in one page. For children who are just learning to use this APP or for children who have poor hand mobility, you should first set the page layout to a page with one picture.</string>
    <string name="product_introduction_4">4. Add a new card\nProcess for adding a new card: click \"Empty\" and click \"Create new\" click \"Take a photo\" to take your own picture or click \"Choose from album\" and select an appropriate photo, click \"use photos\" and then click \"Done\" entered the photo\'s name, then click \"Next\" and \"Record\". After the recording is completed, press \"stop\". Listen to your recording, and if you are not satisfied you can re-record, otherwise click \"Finish\".</string>
    <string name="product_introduction_5">5. Editing Courseware\nEnter edit mode, click on the drop-down menu between \"Done\" and \"library\" buttons. The menu will show the existing courseware and at bottom of the menu there is the \"New courseware\" button. You can either edit existing courseware to produce courseware that meets with your requirements, or you can also  generate new courseware. ( 1 ) Re-editing existing courseware. Click existing courseware. After entering the courseware, you can delete existing images or set animation effect. You can click on  \"empty\" and add pictures. Click on \"From library\", you can select appropriate pictures from the Library. Click on \"Create new\", pictures can be made in accordance to user needs. ( 2 )New courseware. Click on the \"New courseware\", enter the name of the new courseware, and then add pictures.</string>
    <string name="product_introduction_6">6. Designing courseware with categories\nWhen a child is able to select the correct picture in one category, you need to create multiple categories courseware. Like creating new courseware, add new courseware, and give the courseware a new name. Then add no longer a single picture, but a category of pictures. Specific procedures: Click the \"Empty\", click \"From library\".Click the \"plus\" button on the upper right corner, then add successfully. In edit mode, enter a category, afterwards you can add, delete and make other changes to the pictures in this category. To delete a category, click the icon on the top right corner, then click on the trashcan icon to delete the category.</string>
    <string name="training_introduction_advantage">The biggest advantage of Yuudee is that it can make appropriate courseware based on each child\'s situation. The Picture Communication System has a set of standardized training procedures and has been shown to enhance autistic children\'s social and communication skills. We have developed a set of training processes, refered to Picture Communication System process and the characteristics of Yuudee. Outside trainers should be proficient in using the application, in accordance with the training program, and follow the training procedures. We hope children will consciously use Yuudee to aid in them in expressing themselves. Below is an introduction to the Yuudee\'s training process.</string>
    <string name="training_introduction_prepare">Preparation: In order to fully mobilize and motivate children to participate in the training process and improve, positive reinforcement is a very important matter. Before starting training, the trainer should notice the food, toys, activities, etc. that childrenare particularly fond of in their daily schedules, and remember them as a candidates for positive reinforcement. These items should be made into pictures, and stored in a small gallery and used in the development of the Yuudee courseware.</string>
    <string name="training_introduction_stages">The training is divided into five phases. The first two stages primarily enable children to set up consiouness to use Yuudee when they want to epress themselves. The first four stages of the training are needed before a children\'s ability to use Yuudee to express their needs is ready. The last stage is designed to allow kids to use Yuudee to perform every day functions. Limb auxiliary in the training should be completed by third helper. In order to allow the child to begin using Yuudee in everyday life, trainers will seize opportunities such as play time and training periods and let the children use Yuudee to express themselves. In the process of training, trainers should carefully record training content and the level obtained by the child, so that timely adjustments to the training content and schedule can be made.</string>
    <string name="training_introduction_stage_1">Phase One Target: When children see the items they want, they will spontaneously click on the picture on the device.\n Training steps: 1. Develop courseware: Edit  new courseware, add pictures that children particularly like. 2. Display the items in front of children, and stimulate  their desire to get the items. 3. When the children reach for items, take his/her hand to click on the picture on the iPad. 4. After clicking successfully, immediately give him/her the items. When the kids get the item, the trainer have to give feedback by saying something, such as the name of the article. As the training progresses, try to gradually reduce auxiliary help. From original total assistance, reduce to only giving a small amount of help. In the beginning you can take his/her hand and place it in front of the ipad, and let him/her complete the clicking process. Gradually, you may prompt the hild by touch or language (such as \"point and I will give it to you\") then the child can click him/herself. Hopefully eventually the child can independently complete the process in the absence of any support. Trainers should pay attention to the use of language, to prevent heard into giving instructions. In addition, the trainer must maintain the participation motivation of child by changing positive reinforcement timely.</string>
    <string name="training_introduction_stage_2">Phase II Target: When kids see the items they want, they can use the ipad in front of the trainer clicking on the right picture to obtain desired items.\n1. Courseware for this phase contains only one picture, and it is a picture that the child likes. 2. Firstly gradually increase the distance between the child and trainer. Then gradually increase the distance between the child and the iPad. Characteristic of the second phase is to promote the idea that children need more activity in order to get tems. 3. On the beginning of the process we can assist children to complete the training, but gradually reduce the help. 4. In order to encourage child to participate, trainer can be eating/playing in front of the child with something he/she likes to eat or play with. For example, when kids are playing, trainers can play with his or her favorite toy at certain distance from the child, making him/her use the iPad to click on pictures of the toy in front of trainer in order to play. 5. During this process you can create opportunities to improve the children\'s ability to start the interaction, such as teaching them how to attract the attention of trainers. When the child goes to the trainer, the trainer should not be focused on the child, so that the child will need to attract the attention of trainers, this process requires the child to learn how to attract others\' attention. 6. The number and type of reinforcers should be increased to maintain the children\'s interest and motivation. When using one positive reinforcement only, it is easy for children to lose interest, and not follow up with the training.</string>
    <string name="export_material">Export material</string>
    <string name="reset_card">Reset card</string>
</resources>