<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 G-Wearable Inc.
  ~ All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settings_root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:paddingLeft="45dp"
        android:paddingRight="40dp"
        android:gravity="center_vertical|right"
        android:orientation="vertical"
        android:background="@mipmap/product_info_page">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="82dp"
            android:layout_marginBottom="12dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/product_introduction_1"
                    android:textSize="@dimen/parent_about_content_text_size"
                    android:textColor="@color/parent_about_content_text_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/product_introduction_2"
                    android:textSize="@dimen/parent_about_content_text_size"
                    android:textColor="@color/parent_about_content_text_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/product_introduction_3"
                    android:textSize="@dimen/parent_about_content_text_size"
                    android:textColor="@color/parent_about_content_text_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/product_introduction_4"
                    android:textSize="@dimen/parent_about_content_text_size"
                    android:textColor="@color/parent_about_content_text_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/product_introduction_5"
                    android:textSize="@dimen/parent_about_content_text_size"
                    android:textColor="@color/parent_about_content_text_color" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/product_introduction_6"
                    android:textSize="@dimen/parent_about_content_text_size"
                    android:textColor="@color/parent_about_content_text_color" />
            </LinearLayout>
        </ScrollView>

        <TextView
            android:id="@+id/about_product_introduction_window_quit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:clickable="true"
            android:onClick="onClick"
            android:layout_marginRight="26dp"
            android:text="@string/back"
            android:textSize="12dp"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>
