<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 G-Wearable Inc.
  ~ All rights reserved.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@mipmap/addnew_card_bg"
    android:layout_marginTop="@dimen/new_card_or_category_margin_top"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="top|center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/card_bg"
                android:layout_width="140dp"
                android:layout_height="130dp"
                android:background="@mipmap/card_bg"
                android:orientation="vertical"
                android:gravity="top|center_horizontal">

                <ImageView
                    android:id="@+id/card_cover"
                    android:layout_width="105dp"
                    android:layout_height="80dp"
                    android:scaleType="fitXY"
                    android:layout_marginTop="8dp"
                    android:src="@mipmap/default_image" />

                <TextView
                    android:id="@+id/card_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center"
                    android:textColor="@color/card_name_color"
                    android:textSize="14dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/trash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:onClick="onClick"
                android:visibility="gone"
                android:layout_gravity="left|top"
                android:src="@mipmap/trash"/>
        </FrameLayout>

        <LinearLayout
            android:id="@+id/cover_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:paddingTop="6dp"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/choose_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingRight="28dp"
                android:textColor="@color/card_name_color"
                android:onClick="onClick"
                android:textSize="13dp"
                android:background="@mipmap/choose" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:background="@drawable/camera_btn" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:background="@drawable/album_btn" />
            </LinearLayout>

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:singleLine="true"
                android:maxLength="8"
                android:textSize="14dp"
                android:hint="@string/enter_card_name"
                android:textColor="@android:color/black"
                android:background="@mipmap/name_edit_field" />
        </LinearLayout>

        <TextView
            android:id="@+id/record_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:visibility="gone"
            android:layout_gravity="left|center_vertical"
            android:text="@string/record_sound_for_card"
            android:textColor="@color/card_name_color"
            android:textSize="12dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sound_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="0dp"
        android:visibility="gone"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/record_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:background="@mipmap/record" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/play_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:background="@drawable/play_btn" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/delete_sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:background="@drawable/delete_btn" />
        </LinearLayout>

        <TextView
            android:id="@+id/record_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:layout_marginTop="3dp"
            android:text="@string/prepare"
            android:textSize="12dp"
            android:layout_marginLeft="20dp"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/previous_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:background="@drawable/parent_editpop_cancel" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:onClick="onClick"
            android:background="@drawable/next_btn" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/next_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_margin="40dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:background="@drawable/previous_btn" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="120dp"
            android:onClick="onClick"
            android:background="@drawable/parent_editpop_confirm" />
    </LinearLayout>
</LinearLayout>

